2008-01-17 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/WriteCD.py: check if gnome is the desktop, #1599

2008-01-17  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/ArgHandler.py: 0001588: -a summary does nothing

2008-01-17 Jim Sack <jgsack@san.rr.com>
	* src/plugins/NarrativeWeb.py : fix parens typo/error

2008-01-17 Benny Malengier <benny.malengier@gramps-project.org>
	* src/glade/gramps.glade: wrong visible setting in some editors, #1612

2008-01-17 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/_RelationView.py: isue #1605, not twice in same family

2008-01-17 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/PersonView.py: issue 1451, double click to expand nodes

2008-01-13  Jerome Rapinat <romjerome@yahoo.fr>
	* src/plugins/NarrativeWeb.py: make Filter translatable
	0001490: Cannot translate few 'filter' labels 

2008-01-16  Stéphane Charette <stephanecharette@gmail.com>
	* debian/changelog: skip everything related to help
	* debian/rules: skip everything related to help
	* configure.in: fix up "beta" version number for next time

2008-01-16  Stéphane Charette <stephanecharette@gmail.com>
	* configure.in: changed version number scheme for beta 1

2008-01-15  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/plugins/WriteCD.py
	* src/plugins/vcardexport.glade
	* src/plugins/ExportVCard.py
	* src/plugins/writeftree.glade
	* src/plugins/ExportCSV.py
	* src/plugins/csvexport.glade
	* src/plugins/vcalendarexport.glade
	* src/plugins/ExportVCalendar.py
	* src/plugins/genewebexport.glade
	* src/plugins/WriteGeneWeb.py
	* src/ExportAssistant.py
	* src/ExportOptions.py
	* src/ArgHandler.py
	work on mnemonics for export dialogues and doc string fixes

2008-01-16 Benny Malengier <benny.malengier@gramps-project.org>
	* src/ArgHandler.py: don't crash arghandler on wrong input #1592
	* src/const.py.in: Add -h and --help so those work for non gnome users
