@@ -1,3 +1,7 @@
+2008-01-17  Raphael Ackermann <raphael.ackermann@gmail.com>
+    * src/ScratchPad.py: remove tooltip for events as it crashes.
+    * src/Utils.py: cleanup
+
 2008-01-17 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/plugins/WriteCD.py: check if gnome is the desktop, #1599
 
